[feat]  엔티티 테이블로 이름설정 및 키워드랑 역량스코어들 연관관계설정 등#2